--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "pnpm --parallel --filter \"./**\" build",
-    "serve": "pnpm --parallel --filter \"./**\" preview",
+    "serve": "pnpm --parallel --filter \"./**\" serve",
     "build:remotes": "pnpm --parallel --filter \"./remote-*\" build",
     "serve:remotes": "pnpm --parallel --filter \"./remote-*\" serve",
     "dev:hosts": "pnpm --filter \"./host\" dev",
